Closed
Bug 1585443
Opened 6 years ago
Closed 6 years ago
Assertion failure: !IsCanonicalizedIP(topLevelURL), at toolkit/components/url-classifier/LookupCache.cpp:451
Categories
(Toolkit :: Safe Browsing, defect, P1)
Toolkit
Safe Browsing
Tracking
()
RESOLVED
FIXED
mozilla71
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox-esr68 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | --- | unaffected |
| firefox69 | --- | unaffected |
| firefox70 | --- | unaffected |
| firefox71 | --- | fixed |
People
(Reporter: bc, Assigned: dimi)
References
()
Details
(4 keywords)
Attachments
(1 file)
- CAUTION * IP only weird url is suspicious. Be careful.
- Assert Nightly Linux/Windows but not Beta.
Assertion failure: !IsCanonicalizedIP(topLevelURL), at /builds/worker/workspace/build/src/toolkit/components/url-classifier/LookupCache.cpp:451
#01: mozilla::net::(anonymous namespace)::TableData::DoLookup(nsUrlClassifierDBServiceWorker*) (/mozilla/builds/nightly/mozilla/firefox-debug/dist/
#02: mozilla::detail::RunnableFunction<mozilla::net::AsyncUrlChannelClassifier::CheckChannel(nsIChannel*, std::function<void ()>&&)::$_0>::Run() (/
#03: nsThread::ProcessNextEvent(bool, bool*) (/mozilla/builds/nightly/mozilla/firefox-debug/dist/bin/libxul.so)
#04: NS_ProcessNextEvent(nsIThread*, bool) (/mozilla/builds/nightly/mozilla/firefox-debug/dist/bin/libxul.so)
#05: mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) (/mozilla/builds/nightly/mozilla/firefox-debug/dist/bin/libxul.s
#06: MessageLoop::RunInternal() (/mozilla/builds/nightly/mozilla/firefox-debug/dist/bin/libxul.so)
#07: MessageLoop::Run() (/mozilla/builds/nightly/mozilla/firefox-debug/dist/bin/libxul.so)
#08: nsThread::ThreadFunc(void*) (/mozilla/builds/nightly/mozilla/firefox-debug/dist/bin/libxul.so)
#09: _pt_root (/mozilla/builds/nightly/mozilla/firefox-debug/dist/bin/libnspr4.so)
#10: start_thread (/build/glibc-KRRWSm/glibc-2.29/nptl/pthread_create.c:487 (discriminator 6))
#11: __GI___clone (/build/glibc-KRRWSm/glibc-2.29/misc/../sysdeps/unix/sysv/linux/x86_64/clone.S:97)
#12: ??? (???:???)
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → dlee
Status: NEW → ASSIGNED
Priority: -- → P1
| Assignee | ||
Comment 1•6 years ago
|
||
Top-level URL and third-party URL can be an IP address, remove
IsCanonicalizedIP assertion and do not fragment a domain when the domain is an IP address
Pushed by dlee@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1d05fb3ba169
Remove IsCanonicalizedIP assertion. r=Ehsan
Comment 3•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox71:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Updated•6 years ago
|
status-firefox67:
--- → unaffected
status-firefox68:
--- → unaffected
status-firefox69:
--- → unaffected
status-firefox70:
--- → unaffected
status-firefox-esr60:
--- → unaffected
status-firefox-esr68:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•