Bug 1585443 - Remove IsCanonicalizedIP assertion. r=Ehsan

Top-level URL and third-party URL can be an IP address, remove
IsCanonicalizedIP assertion and do not fragment a domain when the domain is an IP address

Differential Revision: https://phabricator.services.mozilla.com/D47916

--HG--
extra : moz-landing-system : lando